<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_browse"
        android:title="@string/menu_browse"
        android:icon="@drawable/ic_browse"
        android:alpha="0.7"
        app:showAsAction="never" />

    <item android:id="@+id/menu_bookmarks"
        android:title="@string/menu_bookmarks"
        android:icon="@drawable/ic_bookmarks"
        android:alpha="0.7"
        app:showAsAction="never" />

    <item android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:alpha="0.7"
        app:showAsAction="never" />

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        android:alpha="0.7"
        app:showAsAction="never" />

</menu>
