<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MediaDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/item_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView

        android:id="@+id/fragment_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

       <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/details_layout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/item_details_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/item_details_table_row0"
                    android:layout_width="0dip"
                    android:layout_height="0dip"
                    android:layout_weight="1">

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/item_details_table_row0_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="1">
                        <!-- non static, should be changed case by case -->
                            <ImageView
                                android:id="@+id/movie_poster"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/big_short"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="1">

                            <TableLayout
                                android:id="@+id/tableLayout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp">

                                <TableRow
                                    android:id="@+id/tableRow0"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:id="@+id/item_details_title"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="20dp"
                                        android:gravity="left"
                                        android:paddingRight="5dp"
                                        android:text="@string/details_title"></TextView>
                                </TableRow>

                                <TableRow
                                    android:id="@+id/tableRow1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp">

                                    <TextView
                                        android:id="@+id/item_details_avaliable"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="16dp"
                                        android:textStyle="bold"
                                        android:gravity="left"
                                        android:text="@string/details_available_sources"></TextView>
                                </TableRow>

                                <TableRow
                                    android:id="@+id/tableRow2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:weightSum="1">
                                    <!-- not sure how many services to add?? will do a max of four for now -->
                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="fill_parent"

                                        android:orientation="horizontal">

                                        <ImageView
                                            android:id="@+id/item_details_service0"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:layout_marginLeft="5dp"
                                            android:src="@drawable/hulu" />

                                        <ImageView
                                            android:id="@+id/item_details_service1"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:layout_marginLeft="25dp"
                                            android:src="@drawable/netflix" />
                                    </LinearLayout>
                                </TableRow>

                                <TableRow
                                    android:id="@+id/tableRow3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                                    <!-- not sure how many services to add?? will do a max of four for now -->
                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="fill_parent"

                                        android:orientation="horizontal">

                                        <ImageView
                                            android:id="@+id/item_details_service2"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:layout_marginLeft="5dp"
                                            android:src="@drawable/hbo" />

                                        <ImageView
                                            android:id="@+id/item_details_service3"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:layout_marginLeft="25dp"
                                            android:src="@drawable/amazon" />
                                    </LinearLayout>
                                </TableRow>

                                <TableRow
                                    android:id="@+id/tableRow4"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="15dp">

                                    <!-- not sure how many services to add?? will do a max of four for now -->
                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="fill_parent"

                                        android:orientation="horizontal">

                                        <ImageView
                                            android:id="@+id/item_details_bookmarkIcon"
                                            android:layout_width="25dp"
                                            android:layout_height="25dp"
                                            android:src="@drawable/bookmark" />

                                        <TextView
                                            android:id="@+id/item_details_bookmarkText"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_marginLeft="5dp"
                                            android:layout_marginTop="0dp"
                                            android:textSize="16dp"
                                            android:text="@string/details_bookmark"></TextView>
                                    </LinearLayout>
                                </TableRow>
                            </TableLayout>
                        </LinearLayout>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/item_details_table_row1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/item_details_table_row1_layout"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:orientation="vertical">

                        <TableLayout
                            android:id="@+id/item_details_table_row1_table0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp">

                            <TextView
                                android:id="@+id/item_details_rotten_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="0dp"
                                android:ems="10"
                                android:text="@string/details_rottenText"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/item_details_rotten_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@+id/item_details_rotten_text"
                                android:layout_toRightOf="@+id/item_details_rotten_text"
                                android:textSize="16dp"
                                android:ems="10"
                                android:inputType="textPersonName"
                                android:text="@string/details_rottenScore" />
                        </TableLayout>

                        <TextView
                            android:id="@+id/item_details_plotSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/item_details_rotten_text"
                            android:layout_toLeftOf="@+id/item_details_rotten_score"
                            android:layout_toStartOf="@+id/item_details_rotten_score"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:paddingTop="10dp"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:text="@string/details_plotSummary" />

                        <!-- NEEDS TEXT WRAPPING -->
                        <TableLayout
                            android:id="@+id/item_details_table_row1_table1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="4dp">
                            <TextView
                                android:id="@+id/item_details_plot"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:width="0dp"
                                android:ellipsize="none"
                                android:ems="10"
                                android:maxLines="100"
                                android:scrollHorizontally="false"
                                android:text="@string/details_plot"
                                android:textSize="16dp" />
                        </TableLayout>
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>